updated UI. Main menu, level select, credits scene. Fixed pause menu

--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -133,13 +133,10 @@ RotGridEnabled=False
 SnapScaleEnabled=False
 
 [EditorStartup]
-LastLevel=/Game/OurProject/Maps/Forest_Scene/ForestScene
+LastLevel=/Game/OurProject/Maps/LevelSelect
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Water/Materials/WaterSurface/Water_Material_River.Water_Material_River
-OpenAssetsAtExit=/Water/Materials/WaterSurface/Transitions/Water_Material_River_To_Lake_Transition.Water_Material_River_To_Lake_Transition
-OpenAssetsAtExit=/Water/Materials/WaterSurface/Transitions/Water_Material_River_To_Ocean_Transition.Water_Material_River_To_Ocean_Transition
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -176,7 +173,7 @@ WorldSettings=
 Info=
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Appearance.Font\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
@@ -421,8 +418,8 @@ EdGraphNode="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
 CanvasPanel="\"Object\" "
 PanelWidget="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
-Widget="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
-Visual="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
+Widget="\"Object\" \"Object.Appearance.Font\" "
+Visual="\"Object\" \"Object.Appearance.Font\" "
 VerticalBox="\"Object\" "
 Button="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
 ContentWidget="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
@@ -461,9 +458,14 @@ WaterLandscapeBrush="\"Object.Debug.LandscapeQuads\" "
 LandscapeBlueprintBrush="\"Object.Debug.LandscapeQuads\" "
 LandscapeBlueprintBrushBase="\"Object.Debug.LandscapeQuads\" "
 BoxComponent="\"Object\" "
+HorizontalBox="\"Object\" "
+Credits_C="\"Object\" "
+LevelScriptActor="\"Object\" "
+MainMenu_C="\"Object\" "
+LevelSelect_C="\"Object\" "
 
 [Directories2]
-UNR=../../../../../../Users/linch/OneDrive/Documents/GitHub/Serious_Games/Serious_Games/Content/OurProject/Maps/Forest_Scene
+UNR=../../../../../../Users/Taiki/Documents/GitHub/Serious_Games/Serious_Games/Content/OurProject/Maps
 BRUSH=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/
 FBX=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/
 FBXAnim=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/
@@ -1411,16 +1413,16 @@ InputEditor.TimeStamp=2023.09.23-01.02.56
 InputEditor.LastCompileMethod=Unknown
 SequencerWidgets.TimeStamp=2023.09.23-00.56.10
 SequencerWidgets.LastCompileMethod=Unknown
-Water.TimeStamp=2023.09.07-10.53.00
-Water.LastCompileMethod=Unknown
-BlueprintMaterialTextureNodes.TimeStamp=2023.09.07-10.40.53
-BlueprintMaterialTextureNodes.LastCompileMethod=Unknown
-Landmass.TimeStamp=2023.09.07-10.42.16
-Landmass.LastCompileMethod=Unknown
-LandmassEditor.TimeStamp=2023.09.07-10.42.16
-LandmassEditor.LastCompileMethod=Unknown
-WaterEditor.TimeStamp=2023.09.07-10.53.00
-WaterEditor.LastCompileMethod=Unknown
+Water.TimeStamp=2023.09.24-01.13.53
+Water.LastCompileMethod=External
+BlueprintMaterialTextureNodes.TimeStamp=2023.09.23-01.02.12
+BlueprintMaterialTextureNodes.LastCompileMethod=External
+Landmass.TimeStamp=2023.09.23-01.02.58
+Landmass.LastCompileMethod=External
+LandmassEditor.TimeStamp=2023.09.23-01.02.58
+LandmassEditor.LastCompileMethod=External
+WaterEditor.TimeStamp=2023.09.24-01.13.53
+WaterEditor.LastCompileMethod=External
 
 [Python]
 LastDirectory=
@@ -1446,7 +1448,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/OurProject/Character
+ContentBrowserDrawer.SelectedPaths=/Game/OurProject/UI
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=/Game/OurProject/Maps/bedroom_scene/assets,/Game/FirstPerson/Maps,/Game/OurProject/Maps/Forest_Scene
@@ -3072,6 +3074,68 @@ BoxComponent.Collision=True
 BoxComponent.Rendering=True
 BoxComponent.Tags=True
 BoxComponent.Cooking=True
+HorizontalBox.Layout=True
+HorizontalBox.Behavior=True
+HorizontalBox.Accessibility=True
+HorizontalBox.Render Transform=True
+HorizontalBox.Performance=True
+HorizontalBox.Clipping=True
+HorizontalBox.Navigation=True
+HorizontalBox.Localization=True
+MainMenu_C.Tick=True
+MainMenu_C.Replication=True
+MainMenu_C.Actor=True
+MainMenu_C.Input=True
+MainMenu_C.HLOD=True
+MainMenu_C.WorldPartition=True
+MainMenu_C.Events=True
+Credits_C.Appearance=True
+Credits_C.Designer=True
+Credits_C.Input=True
+Credits_C.Interaction=True
+Credits_C.Performance=True
+Credits_C.Layout=True
+Credits_C.Behavior=True
+Credits_C.Render Transform=True
+Credits_C.Localization=True
+Credits_C.Accessibility=True
+Credits_C.Clipping=True
+Credits_C.Navigation=True
+LevelSelect_C.Tick=True
+LevelSelect_C.Replication=True
+LevelSelect_C.Actor=True
+LevelSelect_C.Input=True
+LevelSelect_C.HLOD=True
+LevelSelect_C.WorldPartition=True
+LevelSelect_C.Events=True
+Credits_C.Tick=True
+Credits_C.Replication=True
+Credits_C.Actor=True
+Credits_C.HLOD=True
+Credits_C.WorldPartition=True
+Credits_C.Events=True
+MainMenu_C.Appearance=True
+MainMenu_C.Designer=True
+MainMenu_C.Interaction=True
+MainMenu_C.Performance=True
+MainMenu_C.Layout=True
+MainMenu_C.Behavior=True
+MainMenu_C.Render Transform=True
+MainMenu_C.Localization=True
+MainMenu_C.Accessibility=True
+MainMenu_C.Clipping=True
+MainMenu_C.Navigation=True
+LevelSelect_C.Appearance=True
+LevelSelect_C.Designer=True
+LevelSelect_C.Interaction=True
+LevelSelect_C.Performance=True
+LevelSelect_C.Layout=True
+LevelSelect_C.Behavior=True
+LevelSelect_C.Render Transform=True
+LevelSelect_C.Localization=True
+LevelSelect_C.Accessibility=True
+LevelSelect_C.Clipping=True
+LevelSelect_C.Navigation=True
 
 [PlacementMode]
 RecentlyPlaced=/Script/Water.WaterBodyRiver;/Engine/Transient.WaterBodyRiverActorFactory_0
@@ -3279,26 +3343,26 @@ SkeletalMeshActor=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Refl
 ProceduralFoliageBlockingVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,
 
 [ContentBrowserRecent]
-MRUItem0=/Water/Materials/WaterSurface/Transitions/Water_Material_River_To_Ocean_Transition
-MRUItem1=/Water/Materials/WaterSurface/Transitions/Water_Material_River_To_Lake_Transition
-MRUItem2=/Water/Materials/WaterSurface/Water_Material_River
-MRUItem3=/Game/OurProject/Maps/Forest_Scene/ForestScene
-MRUItem4=/Game/OurProject/Character/BedroomCharacter
-MRUItem5=/Game/OurProject/Inputs/InputMap
-MRUItem6=/Game/OurProject/Maps/Forest_Scene/Assets/Character/ForestCharacter
-MRUItem7=/Game/OurProject/Maps/Forest_Scene/Assets/UI/PauseMenu
-MRUItem8=/Game/OurProject/Maps/Forest_Scene/Assets/Inputs/InputMap
-MRUItem9=/Game/OurProject/Maps/Forest_Scene/Assets/Inputs/Actions/PauseButton
-MRUItem10=/Game/OurProject/Maps/Forest_Scene/Assets/Character/GameModes/ForestMode
-MRUItem11=/Game/TMStoragesPack1/Storages/meshes/Storage/Library19/SM_Library19
-MRUItem12=/Game/TMStoragesPack1/Storages/blueprints/Storage/BP_Library19
-MRUItem13=/Game/TMStoragesPack1/Storages/blueprints/Storage/BP_Library41
-MRUItem14=/Game/TMStoragesPack1/Storages/_common/textures/T_WoodPlywood01_N
-MRUItem15=/Game/TMStoragesPack1/Storages/_common/materials/MI_WoodPlywood01
-MRUItem16=/Game/TMStoragesPack1/Storages/_common/textures/T_WoodPlywoodSide01_N
-MRUItem17=/Game/TMStoragesPack1/Storages/_common/materials/MI_WoodPlywoodSide01Pine
-MRUItem18=/Game/ArchVizInteriorVol3/Meshes/SM_Stack_of_Books_1
-MRUItem19=/Game/ArchVizInteriorVol3/Meshes/SM_Stack_of_Books_2
+MRUItem0=/Game/OurProject/UI/LevelSelect
+MRUItem1=/Game/OurProject/UI/PauseMenu
+MRUItem2=/Game/OurProject/UI/MainMenu
+MRUItem3=/Game/OurProject/UI/Credits
+MRUItem4=/Game/OurProject/Maps/LevelSelect
+MRUItem5=/Game/OurProject/Maps/Credits
+MRUItem6=/Game/OurProject/Maps/MainMenu
+MRUItem7=/Water/Materials/WaterSurface/Transitions/Water_Material_River_To_Ocean_Transition
+MRUItem8=/Water/Materials/WaterSurface/Transitions/Water_Material_River_To_Lake_Transition
+MRUItem9=/Water/Materials/WaterSurface/Water_Material_River
+MRUItem10=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem11=/Game/OurProject/Character/BedroomCharacter
+MRUItem12=/Game/OurProject/Inputs/InputMap
+MRUItem13=/Game/OurProject/Maps/Forest_Scene/Assets/Character/ForestCharacter
+MRUItem14=/Game/OurProject/Maps/Forest_Scene/Assets/UI/PauseMenu
+MRUItem15=/Game/OurProject/Maps/Forest_Scene/Assets/Inputs/InputMap
+MRUItem16=/Game/OurProject/Maps/Forest_Scene/Assets/Inputs/Actions/PauseButton
+MRUItem17=/Game/OurProject/Maps/Forest_Scene/Assets/Character/GameModes/ForestMode
+MRUItem18=/Game/TMStoragesPack1/Storages/meshes/Storage/Library19/SM_Library19
+MRUItem19=/Game/TMStoragesPack1/Storages/blueprints/Storage/BP_Library19
 
 [AssetEditorToolkitTabLocation]
 /Game/LevelPrototyping/Materials/MI_Solid_Blue.MI_Solid_Blue=1
@@ -3454,6 +3518,12 @@ MRUItem19=/Game/ArchVizInteriorVol3/Meshes/SM_Stack_of_Books_2
 /Water/Materials/WaterSurface/Water_Material_River.Water_Material_River=1
 /Water/Materials/WaterSurface/Transitions/Water_Material_River_To_Lake_Transition.Water_Material_River_To_Lake_Transition=1
 /Water/Materials/WaterSurface/Transitions/Water_Material_River_To_Ocean_Transition.Water_Material_River_To_Ocean_Transition=1
+/Game/OurProject/Maps/MainMenu.MainMenu:PersistentLevel.MainMenu=1
+/Game/OurProject/UI/MainMenu.MainMenu=1
+/Game/OurProject/UI/Credits.Credits=1
+/Game/OurProject/UI/LevelSelect.LevelSelect=1
+/Game/OurProject/Maps/LevelSelect.LevelSelect:PersistentLevel.LevelSelect=1
+/Game/OurProject/Maps/Credits.Credits:PersistentLevel.Credits=1
 
 [MaterialInstanceEditor]
 bShowGrid=True
@@ -3524,12 +3594,15 @@ PrimType=1
 PreserveScaleRatio=False
 
 [MRU]
-MRUItem0=/Game/OurProject/Maps/Forest_Scene/ForestScene
-MRUItem1=/Game/FirstPerson/Maps/FirstPersonMap
-MRUItem2=/Game/ArchVizInteriorVol3/Maps/Overview
-MRUItem3=/Game/OurProject/Maps/bedroom_scene/bedroom_scene
-MRUItem4=/Game/StarterContent/Maps/StarterMap
-MRUItem5=/Game/OurProject/Maps/CabinInWoods
+MRUItem0=/Game/OurProject/Maps/LevelSelect
+MRUItem1=/Game/OurProject/Maps/Credits
+MRUItem2=/Game/OurProject/Maps/MainMenu
+MRUItem3=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem4=/Game/FirstPerson/Maps/FirstPersonMap
+MRUItem5=/Game/ArchVizInteriorVol3/Maps/Overview
+MRUItem6=/Game/OurProject/Maps/bedroom_scene/bedroom_scene
+MRUItem7=/Game/StarterContent/Maps/StarterMap
+MRUItem8=/Game/OurProject/Maps/CabinInWoods
 
 [LandscapeEdit]
 ToolStrength=0.0560000017
@@ -3822,7 +3895,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=PIE
 
 [/Script/UnrealEd.EditorExperimentalSettings]
 bEnableInterchangeFramework=False
@@ -3910,6 +3983,7 @@ Special Effects=False
 Synth=False
 User Created=False
 Advanced=False
+Uncategorized=False
 
 [UMGEditor.Designer]
 PreviewWidth=1280
