--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -133,7 +133,7 @@ RotGridEnabled=False
 SnapScaleEnabled=False
 
 [EditorStartup]
-LastLevel=/Game/OurProject/Maps/LevelSelect
+LastLevel=/Game/OurProject/Maps/Forest_Scene/ForestScene
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -173,7 +173,7 @@ WorldSettings=
 Info=
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.Appearance.Font\" "
+Object="\"Object\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
@@ -376,7 +376,7 @@ GameplayTagsDeveloperSettings="\"Object\" "
 LogVisualizerSettings="\"Object\" "
 SlateThemeManager="\"Object\" "
 ProceduralFoliageSpawner="\"Object\" \"Object.ProceduralFoliageSimulation.FoliageTypes\" "
-ProceduralFoliageVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+ProceduralFoliageVolume="\"Object\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 DisplaceMeshCommonProperties="\"Object\" "
 DisplaceMeshDirectionalFilterProperties="\"Object\" "
 DisplaceMeshPerlinNoiseProperties="\"Object\" "
@@ -392,7 +392,7 @@ PointLightComponent="\"Object\" "
 LocalLightComponent="\"Object\" "
 LightComponent="\"Object\" "
 LightComponentBase="\"Object\" "
-ProceduralFoliageBlockingVolume="\"Object\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+ProceduralFoliageBlockingVolume="\"Object\" \"Object.ProceduralFoliage.DensityFalloff\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 MegascansSettings="\"Object\" "
 MaterialPresetsSettings="\"Object\" "
 MaterialBlendSettings="\"Object\" "
@@ -465,7 +465,7 @@ MainMenu_C="\"Object\" "
 LevelSelect_C="\"Object\" "
 
 [Directories2]
-UNR=../../../../../../Users/Taiki/Documents/GitHub/Serious_Games/Serious_Games/Content/OurProject/Maps
+UNR=D:/Unreal Projects/Serious_Games/Serious_Games/Content/OurProject/Maps/Forest_Scene
 BRUSH=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/
 FBX=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/
 FBXAnim=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/
@@ -1448,7 +1448,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/OurProject/UI
+ContentBrowserDrawer.SelectedPaths=/Game/OurProject/Maps/Forest_Scene
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=/Game/OurProject/Maps/bedroom_scene/assets,/Game/FirstPerson/Maps,/Game/OurProject/Maps/Forest_Scene
@@ -3300,7 +3300,7 @@ WorldSettings=WorldSettings.WorldPartition.None,WorldSettings.GameMode.SelectedG
 WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartition.None,WorldSettings.GameMode.SelectedGameModeDetails,
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings,
 PostProcessVolume=PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens,
-BrushComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,
+BrushComponent=
 StaticMeshActor=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,
 DirectionalLight=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,
 SceneComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,
@@ -3341,19 +3341,20 @@ WaterBrushManager=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Refl
 WaterZone=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,
 SkeletalMeshActor=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,
 ProceduralFoliageBlockingVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,
+ProceduralFoliageVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/OurProject/UI/LevelSelect
-MRUItem1=/Game/OurProject/UI/PauseMenu
-MRUItem2=/Game/OurProject/UI/MainMenu
-MRUItem3=/Game/OurProject/UI/Credits
-MRUItem4=/Game/OurProject/Maps/LevelSelect
-MRUItem5=/Game/OurProject/Maps/Credits
-MRUItem6=/Game/OurProject/Maps/MainMenu
-MRUItem7=/Water/Materials/WaterSurface/Transitions/Water_Material_River_To_Ocean_Transition
-MRUItem8=/Water/Materials/WaterSurface/Transitions/Water_Material_River_To_Lake_Transition
-MRUItem9=/Water/Materials/WaterSurface/Water_Material_River
-MRUItem10=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem0=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem1=/Game/OurProject/UI/LevelSelect
+MRUItem2=/Game/OurProject/UI/PauseMenu
+MRUItem3=/Game/OurProject/UI/MainMenu
+MRUItem4=/Game/OurProject/UI/Credits
+MRUItem5=/Game/OurProject/Maps/LevelSelect
+MRUItem6=/Game/OurProject/Maps/Credits
+MRUItem7=/Game/OurProject/Maps/MainMenu
+MRUItem8=/Water/Materials/WaterSurface/Transitions/Water_Material_River_To_Ocean_Transition
+MRUItem9=/Water/Materials/WaterSurface/Transitions/Water_Material_River_To_Lake_Transition
+MRUItem10=/Water/Materials/WaterSurface/Water_Material_River
 MRUItem11=/Game/OurProject/Character/BedroomCharacter
 MRUItem12=/Game/OurProject/Inputs/InputMap
 MRUItem13=/Game/OurProject/Maps/Forest_Scene/Assets/Character/ForestCharacter
@@ -3594,10 +3595,10 @@ PrimType=1
 PreserveScaleRatio=False
 
 [MRU]
-MRUItem0=/Game/OurProject/Maps/LevelSelect
-MRUItem1=/Game/OurProject/Maps/Credits
-MRUItem2=/Game/OurProject/Maps/MainMenu
-MRUItem3=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem0=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem1=/Game/OurProject/Maps/LevelSelect
+MRUItem2=/Game/OurProject/Maps/Credits
+MRUItem3=/Game/OurProject/Maps/MainMenu
 MRUItem4=/Game/FirstPerson/Maps/FirstPersonMap
 MRUItem5=/Game/ArchVizInteriorVol3/Maps/Overview
 MRUItem6=/Game/OurProject/Maps/bedroom_scene/bedroom_scene
