the same tree duplicated again and again

--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -141,6 +141,7 @@ OpenAssetsAtExit=/Water/Materials/WaterSurface/Water_Material_Lake.Water_Materia
 OpenAssetsAtExit=/Game/OurProject/Maps/Forest_Scene/Assets/trees/leaf_shader.leaf_shader
 OpenAssetsAtExit=/Game/OurProject/Maps/Forest_Scene/Assets/trees/Pogleavestest_mat.Pogleavestest_mat
 OpenAssetsAtExit=/Game/OurProject/Maps/Forest_Scene/Assets/trees/tree_trunk_mat.tree_trunk_mat
+OpenAssetsAtExit=/Game/OurProject/Maps/Forest_Scene/Assets/trees/mapleleave_mat02.mapleleave_mat02
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -3193,6 +3194,8 @@ MaterialExpressionTransform.MaterialExpressionTransform=True
 MaterialExpressionTransform.MaterialExpression=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/trees/test.test;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/trees/mapleleave_mat02.mapleleave_mat02;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/trees/mapleleaves_mat.mapleleaves_mat;
 RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBoxVolume_17
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/trees/tree_trunk_mat.tree_trunk_mat;
@@ -3211,8 +3214,6 @@ RecentlyPlaced=/Game/TMStoragesPack1/Storages/blueprints/Storage/BP_Library28.BP
 RecentlyPlaced=/Game/TMStoragesPack1/Storages/blueprints/Storage/BP_Library30.BP_Library30;
 RecentlyPlaced=/Game/TMStoragesPack1/Storages/blueprints/Storage/BP_Shelves04.BP_Shelves04;
 RecentlyPlaced=/Game/TMStoragesPack1/Storages/blueprints/Storage/BP_Library26.BP_Library26;
-RecentlyPlaced=/Game/TMStoragesPack1/Storages/blueprints/Storage/BP_Library39.BP_Library39;
-RecentlyPlaced=/Game/TMStoragesPack1/Storages/blueprints/Storage/BP_Library34.BP_Library34;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -3358,11 +3359,11 @@ PostProcessVolume=PostProcessVolume.Reflections.Reflections,PostProcessVolume.Le
 BrushComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,PostProcessVolume.Lens.Lens|Image Effects,PostProcessVolume.Lens.Lens|Lens Flares,PostProcessVolume.Lens.Lens|Mobile Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|BloomAdvanced,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Color Grading.Color Grading|Misc,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global IlluminationAdvanced,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global Illumination,PostProcessVolume.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|PathTracing,PostProcessVolume.Lens.Lens|Dirt Mask,PostProcessVolume.Lens.Lens|Camera,PostProcessVolume.Lens.Lens|Local Exposure,PostProcessVolume.Lens.Lens|Depth of Field,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Ambient Occlusion,
 StaticMeshActor=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,PostProcessVolume.Lens.Lens|Image Effects,PostProcessVolume.Lens.Lens|Lens Flares,PostProcessVolume.Lens.Lens|Mobile Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|BloomAdvanced,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Color Grading.Color Grading|Misc,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global IlluminationAdvanced,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global Illumination,PostProcessVolume.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|PathTracing,PostProcessVolume.Lens.Lens|Dirt Mask,PostProcessVolume.Lens.Lens|Camera,PostProcessVolume.Lens.Lens|Local Exposure,PostProcessVolume.Lens.Lens|Depth of Field,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Ambient Occlusion,PostProcessVolume.Lens.Lens|Bloom,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Lens.Lens|Chromatic Aberration,
 DirectionalLight=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,
-SceneComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,PostProcessVolume.Lens.Lens|Image Effects,PostProcessVolume.Lens.Lens|Lens Flares,PostProcessVolume.Lens.Lens|Mobile Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|BloomAdvanced,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Color Grading.Color Grading|Misc,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global IlluminationAdvanced,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global Illumination,PostProcessVolume.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|PathTracing,PostProcessVolume.Lens.Lens|Dirt Mask,PostProcessVolume.Lens.Lens|Camera,PostProcessVolume.Lens.Lens|Local Exposure,PostProcessVolume.Lens.Lens|Depth of Field,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Ambient Occlusion,PostProcessVolume.Lens.Lens|Bloom,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Lens.Lens|Chromatic Aberration,
+SceneComponent=
 CapsuleComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
 PlayerStart=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
 PointLight=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,
-Actor=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,
+Actor=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,PostProcessVolume.Lens.Lens|Image Effects,PostProcessVolume.Lens.Lens|Lens Flares,PostProcessVolume.Lens.Lens|Mobile Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|BloomAdvanced,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Color Grading.Color Grading|Misc,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global IlluminationAdvanced,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global Illumination,PostProcessVolume.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|PathTracing,PostProcessVolume.Lens.Lens|Dirt Mask,PostProcessVolume.Lens.Lens|Camera,PostProcessVolume.Lens.Lens|Local Exposure,PostProcessVolume.Lens.Lens|Depth of Field,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Ambient Occlusion,PostProcessVolume.Lens.Lens|Bloom,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Lens.Lens|Chromatic Aberration,
 SkyAtmosphere=PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens,
 BillboardComponent=PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens,
 WorldPartitionMiniMap=PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens,
@@ -3388,7 +3389,7 @@ BP_Bed_Drawer_C=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflec
 InputMappingContext=InputMappingContext.Mappings.ActionMappings.None,InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/OurProject/Maps/Forest_Scene/Assets/Inputs/Actions/PauseButton.PauseButton,InputMappingContext.Mappings.ActionMappings./Game/OurProject/Inputs/Actions/PauseButton.PauseButton,
 InstancedFoliageActor=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,PostProcessVolume.Lens.Lens|Image Effects,PostProcessVolume.Lens.Lens|Lens Flares,PostProcessVolume.Lens.Lens|Mobile Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|BloomAdvanced,PostProcessVolume.Lens.Lens|Bloom,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Color Grading.Color Grading|Misc,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global IlluminationAdvanced,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global Illumination,PostProcessVolume.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|PathTracing,PostProcessVolume.Lens.Lens|Chromatic Aberration,PostProcessVolume.Lens.Lens|Dirt Mask,PostProcessVolume.Lens.Lens|Camera,PostProcessVolume.Lens.Lens|Local Exposure,PostProcessVolume.Lens.Lens|Depth of Field,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Ambient Occlusion,
 WaterBodyRiverComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
-Landscape=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,PostProcessVolume.Lens.Lens|Image Effects,PostProcessVolume.Lens.Lens|Lens Flares,PostProcessVolume.Lens.Lens|Mobile Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|BloomAdvanced,PostProcessVolume.Lens.Lens|Bloom,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Color Grading.Color Grading|Misc,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global IlluminationAdvanced,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global Illumination,PostProcessVolume.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|PathTracing,PostProcessVolume.Lens.Lens|Chromatic Aberration,PostProcessVolume.Lens.Lens|Dirt Mask,PostProcessVolume.Lens.Lens|Camera,PostProcessVolume.Lens.Lens|Local Exposure,PostProcessVolume.Lens.Lens|Depth of Field,
+Landscape=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,PostProcessVolume.Lens.Lens|Image Effects,PostProcessVolume.Lens.Lens|Lens Flares,PostProcessVolume.Lens.Lens|Mobile Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|BloomAdvanced,PostProcessVolume.Lens.Lens|Bloom,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Color Grading.Color Grading|Misc,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global IlluminationAdvanced,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global Illumination,PostProcessVolume.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|PathTracing,PostProcessVolume.Lens.Lens|Chromatic Aberration,PostProcessVolume.Lens.Lens|Dirt Mask,PostProcessVolume.Lens.Lens|Camera,PostProcessVolume.Lens.Lens|Local Exposure,PostProcessVolume.Lens.Lens|Depth of Field,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Ambient Occlusion,
 WaterBodyRiver=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
 WaterSplineComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
 WaterMeshComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
@@ -3403,26 +3404,26 @@ RuntimeVirtualTextureVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflec
 MeshComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/OurProject/Maps/Forest_Scene/Assets/trees/mapleleaves_mat
-MRUItem1=/Game/OurProject/Maps/Forest_Scene/Assets/trees/tree_trunk_mat
-MRUItem2=/Game/OurProject/Maps/Forest_Scene/Assets/trees/Pogleavestest_mat
-MRUItem3=/Game/OurProject/Maps/Forest_Scene/Assets/trees/tree_shader
-MRUItem4=/Water/Materials/WaterSurface/Water_Material_Lake
-MRUItem5=/Game/OurProject/Maps/Forest_Scene/ForestScene
-MRUItem6=/Game/OurProject/Maps/MainMenu
-MRUItem7=/Game/OurProject/UI/LevelSelect
-MRUItem8=/Game/OurProject/UI/PauseMenu
-MRUItem9=/Game/OurProject/UI/MainMenu
-MRUItem10=/Game/OurProject/UI/Credits
-MRUItem11=/Game/OurProject/Maps/LevelSelect
-MRUItem12=/Game/OurProject/Maps/Credits
-MRUItem13=/Water/Materials/WaterSurface/Transitions/Water_Material_River_To_Ocean_Transition
-MRUItem14=/Water/Materials/WaterSurface/Transitions/Water_Material_River_To_Lake_Transition
-MRUItem15=/Water/Materials/WaterSurface/Water_Material_River
-MRUItem16=/Game/OurProject/Character/BedroomCharacter
-MRUItem17=/Game/OurProject/Inputs/InputMap
-MRUItem18=/Game/OurProject/Maps/Forest_Scene/Assets/Character/ForestCharacter
-MRUItem19=/Game/OurProject/Maps/Forest_Scene/Assets/UI/PauseMenu
+MRUItem0=/Game/OurProject/Maps/Forest_Scene/Assets/trees/test
+MRUItem1=/Game/OurProject/Maps/Forest_Scene/Assets/trees/mapleleave_mat02
+MRUItem2=/Game/OurProject/Maps/Forest_Scene/Assets/trees/mapleleaves_mat
+MRUItem3=/Game/OurProject/Maps/Forest_Scene/Assets/trees/tree_trunk_mat
+MRUItem4=/Game/OurProject/Maps/Forest_Scene/Assets/trees/Pogleavestest_mat
+MRUItem5=/Game/OurProject/Maps/Forest_Scene/Assets/trees/tree_shader
+MRUItem6=/Water/Materials/WaterSurface/Water_Material_Lake
+MRUItem7=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem8=/Game/OurProject/Maps/MainMenu
+MRUItem9=/Game/OurProject/UI/LevelSelect
+MRUItem10=/Game/OurProject/UI/PauseMenu
+MRUItem11=/Game/OurProject/UI/MainMenu
+MRUItem12=/Game/OurProject/UI/Credits
+MRUItem13=/Game/OurProject/Maps/LevelSelect
+MRUItem14=/Game/OurProject/Maps/Credits
+MRUItem15=/Water/Materials/WaterSurface/Transitions/Water_Material_River_To_Ocean_Transition
+MRUItem16=/Water/Materials/WaterSurface/Transitions/Water_Material_River_To_Lake_Transition
+MRUItem17=/Water/Materials/WaterSurface/Water_Material_River
+MRUItem18=/Game/OurProject/Character/BedroomCharacter
+MRUItem19=/Game/OurProject/Inputs/InputMap
 
 [AssetEditorToolkitTabLocation]
 /Game/LevelPrototyping/Materials/MI_Solid_Blue.MI_Solid_Blue=1
