--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -136,17 +136,7 @@ SnapScaleEnabled=False
 LastLevel=/Game/OurProject/Maps/Forest_Scene/ForestScene
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/OurProject/Maps/Forest_Scene/Assets/trees/whoag.whoag
-OpenAssetsAtExit=/Game/OurProject/Maps/Forest_Scene/Assets/trees/branch01.branch01
-OpenAssetsAtExit=/Game/OurProject/Maps/Forest_Scene/Assets/trees/leaf_shader.leaf_shader
-OpenAssetsAtExit=/Game/OurProject/Maps/Forest_Scene/Assets/trees/tree_trunk_mat1.tree_trunk_mat1
-OpenAssetsAtExit=/Game/OurProject/Maps/Forest_Scene/Assets/trees/mapleleave_mat02.mapleleave_mat02
-OpenAssetsAtExit=/Game/OurProject/Maps/Forest_Scene/Assets/trees/mapleleaves_mat.mapleleaves_mat
-OpenAssetsAtExit=/Game/OurProject/Maps/Forest_Scene/Assets/trees/Pogleavestest_mat.Pogleavestest_mat
-OpenAssetsAtExit=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass.Grass
-OpenAssetsAtExit=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material_Inst.Grass_Material_Inst
-OpenAssetsAtExit=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material.Grass_Material
+CleanShutdown=False
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -196,7 +186,7 @@ Actor="\"Object\" "
 MaterialEditorInstanceConstant="\"Object\" "
 MaterialInstanceConstant="\"Object\" "
 MaterialInstance="\"Object\" "
-MaterialInterface="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
+MaterialInterface="\"Object\" "
 PreviewMaterial="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
 Material="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
 MaterialExpressionMaterialFunctionCall="\"Object\" "
@@ -213,8 +203,8 @@ MaterialExpressionRuntimeVirtualTextureSampleParameter="\"Object\" "
 MaterialExpressionRuntimeVirtualTextureSample="\"Object\" "
 MaterialExpressionTextureSampleParameter2D="\"Object\" \"Object.ChannelNames\" "
 MaterialExpressionTextureSampleParameter="\"Object\" \"Object.ChannelNames\" "
-MaterialExpressionTextureSample="\"Object\" "
-MaterialExpressionTextureBase="\"Object\" "
+MaterialExpressionTextureSample="\"Object\" \"Object.ChannelNames\" "
+MaterialExpressionTextureBase="\"Object\" \"Object.ChannelNames\" "
 LandscapeEditorObject="\"Object\" "
 LandscapeGizmoRenderComponent="\"Object\" "
 RuntimeVirtualTexture="\"Object\" "
@@ -1474,7 +1464,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/OurProject/Maps/Forest_Scene
+ContentBrowserDrawer.SelectedPaths=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=/Game/OurProject/Maps/bedroom_scene/assets,/Game/FirstPerson/Maps,/Game/OurProject/Maps/Forest_Scene
@@ -3208,6 +3198,9 @@ LandscapeGizmoActiveActor.LandscapeGizmoActiveActor=True
 LandscapeGizmoActiveActor.TransformCommon=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0_Inst.tree1_0_Inst;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_leafshape1_1.tree1_leafshape1_1;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1__0.tree1__0;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/trees/tree_trunk_mat1.tree_trunk_mat1;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/trees/tree_trunk_mat.tree_trunk_mat;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/trees/anothertree__0.anothertree__0;
@@ -3225,9 +3218,6 @@ RecentlyPlaced=/Game/FreeFurniturePack/Blueprints/BP_Bed_Drawer.BP_Bed_Drawer;
 RecentlyPlaced=/Game/OldWest/Shared/Meshes/SM_ZBackdrop_01a.SM_ZBackdrop_01a;
 RecentlyPlaced=/Game/TMStoragesPack1/Storages/blueprints/Storage/BP_TowelHolder05.BP_TowelHolder05;
 RecentlyPlaced=/Game/TMStoragesPack1/Storages/blueprints/Storage/BP_Library40.BP_Library40;
-RecentlyPlaced=/Game/TMStoragesPack1/Storages/blueprints/Storage/BP_Library37.BP_Library37;
-RecentlyPlaced=/Game/TMStoragesPack1/Storages/blueprints/Storage/BP_Library24.BP_Library24;
-RecentlyPlaced=/Game/TMStoragesPack1/Storages/blueprints/Storage/BP_Library28.BP_Library28;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -3419,26 +3409,26 @@ MeshComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflecti
 LandscapeGizmoRenderComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material
-MRUItem1=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material_Inst
-MRUItem2=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass
-MRUItem3=/Game/OurProject/Maps/Forest_Scene/Assets/trees/Pogleavestest_mat
-MRUItem4=/Game/OurProject/Maps/Forest_Scene/Assets/trees/mapleleaves_mat
-MRUItem5=/Game/OurProject/Maps/Forest_Scene/Assets/trees/mapleleave_mat02
-MRUItem6=/Game/OurProject/Maps/Forest_Scene/Assets/trees/tree_trunk_mat1
-MRUItem7=/Game/OurProject/Maps/Forest_Scene/Assets/trees/leaf_shader
-MRUItem8=/Game/OurProject/Maps/Forest_Scene/Assets/trees/branch01
-MRUItem9=/Game/OurProject/Maps/Forest_Scene/Assets/trees/whoag
-MRUItem10=/Game/OurProject/Maps/Forest_Scene/ForestScene
-MRUItem11=/Game/OurProject/Maps/Forest_Scene/Assets/trees/test
-MRUItem12=/Game/OurProject/Maps/Forest_Scene/Assets/trees/tree_trunk_mat
-MRUItem13=/Game/OurProject/Maps/Forest_Scene/Assets/trees/tree_shader
-MRUItem14=/Water/Materials/WaterSurface/Water_Material_Lake
-MRUItem15=/Game/OurProject/Maps/MainMenu
-MRUItem16=/Game/OurProject/UI/LevelSelect
-MRUItem17=/Game/OurProject/UI/PauseMenu
-MRUItem18=/Game/OurProject/UI/MainMenu
-MRUItem19=/Game/OurProject/UI/Credits
+MRUItem0=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0_Inst
+MRUItem1=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0
+MRUItem2=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/NewMaterial
+MRUItem3=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem4=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material
+MRUItem5=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material_Inst
+MRUItem6=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass
+MRUItem7=/Game/OurProject/Maps/Forest_Scene/Assets/trees/Pogleavestest_mat
+MRUItem8=/Game/OurProject/Maps/Forest_Scene/Assets/trees/mapleleaves_mat
+MRUItem9=/Game/OurProject/Maps/Forest_Scene/Assets/trees/mapleleave_mat02
+MRUItem10=/Game/OurProject/Maps/Forest_Scene/Assets/trees/tree_trunk_mat1
+MRUItem11=/Game/OurProject/Maps/Forest_Scene/Assets/trees/leaf_shader
+MRUItem12=/Game/OurProject/Maps/Forest_Scene/Assets/trees/branch01
+MRUItem13=/Game/OurProject/Maps/Forest_Scene/Assets/trees/whoag
+MRUItem14=/Game/OurProject/Maps/Forest_Scene/Assets/trees/test
+MRUItem15=/Game/OurProject/Maps/Forest_Scene/Assets/trees/tree_trunk_mat
+MRUItem16=/Game/OurProject/Maps/Forest_Scene/Assets/trees/tree_shader
+MRUItem17=/Water/Materials/WaterSurface/Water_Material_Lake
+MRUItem18=/Game/OurProject/Maps/MainMenu
+MRUItem19=/Game/OurProject/UI/LevelSelect
 
 [AssetEditorToolkitTabLocation]
 /Game/LevelPrototyping/Materials/MI_Solid_Blue.MI_Solid_Blue=1
@@ -3610,6 +3600,8 @@ MRUItem19=/Game/OurProject/UI/Credits
 /Game/OurProject/Maps/Forest_Scene/Assets/trees/whoag.whoag=1
 /Game/OurProject/Maps/Forest_Scene/Assets/trees/branch01.branch01=1
 /Game/OurProject/Maps/Forest_Scene/Assets/trees/tree_trunk_mat1.tree_trunk_mat1=1
+/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0.tree1_0=1
+/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0_Inst.tree1_0_Inst=1
 
 [MaterialInstanceEditor]
 bShowGrid=True
