--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -136,7 +136,7 @@ SnapScaleEnabled=False
 LastLevel=/Game/OurProject/Maps/Forest_Scene/ForestScene
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -481,7 +481,7 @@ MaterialExpressionConstant2Vector="\"Object\" "
 MaterialExpressionTransform="\"Object\" "
 
 [Directories2]
-UNR=../../../../../../Users/linch/OneDrive/Documents/GitHub/Serious_Games/Serious_Games/Content/OurProject/Maps/Forest_Scene
+UNR=D:/Unreal Projects/Serious_Games/Serious_Games/Content/OurProject/Maps/Forest_Scene
 BRUSH=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/
 FBX=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/
 FBXAnim=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/
@@ -3199,8 +3199,12 @@ LandscapeGizmoActiveActor.TransformCommon=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0_Inst.tree1_0_Inst;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree2_leafshape1_1.tree2_leafshape1_1;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree2__0.tree2__0;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_leafshape1_1.tree1_leafshape1_1;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1__0.tree1__0;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_5_leafshape1_1.tree1_5_leafshape1_1;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_5__0.tree1_5__0;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/trees/tree_trunk_mat1.tree_trunk_mat1;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/trees/tree_trunk_mat.tree_trunk_mat;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/trees/anothertree__0.anothertree__0;
@@ -3214,10 +3218,6 @@ RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/trees/test_tree__0.test
 RecentlyPlaced=/Script/Water.WaterBodyLake;/Engine/Transient.WaterBodyLakeActorFactory_0
 RecentlyPlaced=/Script/Water.WaterBodyRiver;/Engine/Transient.WaterBodyRiverActorFactory_0
 RecentlyPlaced=/Game/Megascans/Surfaces/English_Walnut_Parquet_udlxbgtl/MI_English_Walnut_Parquet_udlxbgtl_4K.MI_English_Walnut_Parquet_udlxbgtl_4K;
-RecentlyPlaced=/Game/FreeFurniturePack/Blueprints/BP_Bed_Drawer.BP_Bed_Drawer;
-RecentlyPlaced=/Game/OldWest/Shared/Meshes/SM_ZBackdrop_01a.SM_ZBackdrop_01a;
-RecentlyPlaced=/Game/TMStoragesPack1/Storages/blueprints/Storage/BP_TowelHolder05.BP_TowelHolder05;
-RecentlyPlaced=/Game/TMStoragesPack1/Storages/blueprints/Storage/BP_Library40.BP_Library40;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
