--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -186,25 +186,25 @@ Actor="\"Object\" "
 MaterialEditorInstanceConstant="\"Object\" "
 MaterialInstanceConstant="\"Object\" "
 MaterialInstance="\"Object\" "
-MaterialInterface="\"Object\" "
+MaterialInterface="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
 PreviewMaterial="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
 Material="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
 MaterialExpressionMaterialFunctionCall="\"Object\" "
-MaterialExpression="\"Object\" \"Object.DefaultValue\" "
+MaterialExpression="\"Object\" "
 MaterialExpressionScalarParameter="\"Object\" \"Object.DefaultValue\" "
 MaterialExpressionParameter="\"Object\" \"Object.DefaultValue\" "
 MaterialExpressionConstant3Vector="\"Object\" \"Object.Constant\" "
 Font="\"Object\" \"Object.Font\" "
 AssetViewerSettings="\"Object\" "
 StaticMesh="\"Object\" "
-StreamableRenderAsset="\"Object\" "
+StreamableRenderAsset="\"Object\" \"Object.Texture.SourceColorSettings\" "
 MapBuildDataRegistry="\"Object\" "
 MaterialExpressionRuntimeVirtualTextureSampleParameter="\"Object\" "
 MaterialExpressionRuntimeVirtualTextureSample="\"Object\" "
 MaterialExpressionTextureSampleParameter2D="\"Object\" \"Object.ChannelNames\" "
 MaterialExpressionTextureSampleParameter="\"Object\" \"Object.ChannelNames\" "
-MaterialExpressionTextureSample="\"Object\" \"Object.ChannelNames\" "
-MaterialExpressionTextureBase="\"Object\" \"Object.ChannelNames\" "
+MaterialExpressionTextureSample="\"Object\" "
+MaterialExpressionTextureBase="\"Object\" "
 LandscapeEditorObject="\"Object\" "
 LandscapeGizmoRenderComponent="\"Object\" "
 RuntimeVirtualTexture="\"Object\" "
@@ -323,8 +323,8 @@ MaterialExpressionDoubleVectorParameter="\"Object\" "
 MaterialExpressionComposite="\"Object\" "
 MaterialExpressionPinBase="\"Object\" \"Object.ReroutePins.ReroutePins[0]\" "
 PostProcessVolume="\"Object\" \"Object.PostProcessVolumeSettings.Settings.ColorGainShadows\" \"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.Bloom1Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom2Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom3Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom4Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom5Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom6Tint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.IndirectLightingColor\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume="\"Object\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Brush="\"Object\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object\" \"Object.PostProcessVolumeSettings.Settings.ColorGainShadows\" \"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.Bloom1Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom2Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom3Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom4Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom5Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom6Tint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.IndirectLightingColor\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object\" \"Object.PostProcessVolumeSettings.Settings.ColorGainShadows\" \"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.Bloom1Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom2Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom3Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom4Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom5Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom6Tint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.IndirectLightingColor\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BrushComponent="\"Object\" "
 PointLight="\"Object\" \"Object.Light.PointLightComponent.Object.Light.LightColor\" "
 Light="\"Object\" "
@@ -1446,7 +1446,7 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/Control
 RecentsFiles=C:/Epic/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/OurProject/Maps/Forest_Scene/Assets/grass
+ContentBrowserTab1.SelectedPaths=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.Locked=False
 ContentBrowserDrawer.FavoritesAreaExpanded=False
@@ -3198,9 +3198,10 @@ LandscapeGizmoActiveActor.LandscapeGizmoActiveActor=True
 LandscapeGizmoActiveActor.TransformCommon=True
 
 [PlacementMode]
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0_Inst.tree1_0_Inst;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibark.ghiblibark;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree2_leafshape1_1.tree2_leafshape1_1;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree2__0.tree2__0;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0_Inst.tree1_0_Inst;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_leafshape1_1.tree1_leafshape1_1;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1__0.tree1__0;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_5_leafshape1_1.tree1_5_leafshape1_1;
@@ -3217,12 +3218,10 @@ RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/trees/test_tree_leaves_
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/trees/test_tree__0.test_tree__0;
 RecentlyPlaced=/Script/Water.WaterBodyLake;/Engine/Transient.WaterBodyLakeActorFactory_0
 RecentlyPlaced=/Script/Water.WaterBodyRiver;/Engine/Transient.WaterBodyRiverActorFactory_0
-RecentlyPlaced=/Game/Megascans/Surfaces/English_Walnut_Parquet_udlxbgtl/MI_English_Walnut_Parquet_udlxbgtl_4K.MI_English_Walnut_Parquet_udlxbgtl_4K;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Surface Properties,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.07 - Texture Maps,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Color,MaterialEditorInstanceConstant.ParameterGroups.Emissivity,MaterialEditorInstanceConstant.ParameterGroups.Opacity,MaterialEditorInstanceConstant.ParameterGroups.Reflections,MaterialEditorInstanceConstant.ParameterGroups.Relief,MaterialEditorInstanceConstant.ParameterGroups.UV Coordinates,MaterialEditorInstanceConstant.ParameterGroups.Weather,MaterialEditorInstanceConstant.ParameterGroups.Detail Normal Settings,MaterialEditorInstanceConstant.ParameterGroups.FluidSimulation,MaterialEditorInstanceConstant.ParameterGroups.General Foam,MaterialEditorInstanceConstant.ParameterGroups.Opacity Mask,MaterialEditorInstanceConstant.ParameterGroups.River Flowmaps,MaterialEditorInstanceConstant.ParameterGroups.TwoSided Settings,MaterialEditorInstanceConstant.ParameterGroups.Water Shading,MaterialEditorInstanceConstant.General.LightmassSettings,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
@@ -3359,12 +3358,12 @@ FoliageType_InstancedStaticMesh=FoliageType_InstancedStaticMesh.Procedural.Colli
 WorldSettings=WorldSettings.WorldPartition.None,WorldSettings.GameMode.SelectedGameModeDetails,
 WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartition.None,WorldSettings.GameMode.SelectedGameModeDetails,
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings,
-PostProcessVolume=PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,PostProcessVolume.Lens.Lens
+PostProcessVolume=PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
 BrushComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
 StaticMeshActor=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
 DirectionalLight=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,
 SceneComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
-CapsuleComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
+CapsuleComponent=
 PlayerStart=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
 PointLight=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,
 Actor=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
@@ -3409,26 +3408,26 @@ MeshComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflecti
 LandscapeGizmoRenderComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0_Inst
-MRUItem1=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0
-MRUItem2=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/NewMaterial
+MRUItem0=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibark
+MRUItem1=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/DefaultMaterial_Mixed_AO
+MRUItem2=/Engine/EngineSky/M_SimpleSkyDome
 MRUItem3=/Game/OurProject/Maps/Forest_Scene/ForestScene
-MRUItem4=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material
-MRUItem5=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material_Inst
-MRUItem6=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass
-MRUItem7=/Game/OurProject/Maps/Forest_Scene/Assets/trees/Pogleavestest_mat
-MRUItem8=/Game/OurProject/Maps/Forest_Scene/Assets/trees/mapleleaves_mat
-MRUItem9=/Game/OurProject/Maps/Forest_Scene/Assets/trees/mapleleave_mat02
-MRUItem10=/Game/OurProject/Maps/Forest_Scene/Assets/trees/tree_trunk_mat1
-MRUItem11=/Game/OurProject/Maps/Forest_Scene/Assets/trees/leaf_shader
-MRUItem12=/Game/OurProject/Maps/Forest_Scene/Assets/trees/branch01
-MRUItem13=/Game/OurProject/Maps/Forest_Scene/Assets/trees/whoag
-MRUItem14=/Game/OurProject/Maps/Forest_Scene/Assets/trees/test
-MRUItem15=/Game/OurProject/Maps/Forest_Scene/Assets/trees/tree_trunk_mat
-MRUItem16=/Game/OurProject/Maps/Forest_Scene/Assets/trees/tree_shader
-MRUItem17=/Water/Materials/WaterSurface/Water_Material_Lake
-MRUItem18=/Game/OurProject/Maps/MainMenu
-MRUItem19=/Game/OurProject/UI/LevelSelect
+MRUItem4=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0_Inst
+MRUItem5=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0
+MRUItem6=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/NewMaterial
+MRUItem7=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material
+MRUItem8=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material_Inst
+MRUItem9=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass
+MRUItem10=/Game/OurProject/Maps/Forest_Scene/Assets/trees/Pogleavestest_mat
+MRUItem11=/Game/OurProject/Maps/Forest_Scene/Assets/trees/mapleleaves_mat
+MRUItem12=/Game/OurProject/Maps/Forest_Scene/Assets/trees/mapleleave_mat02
+MRUItem13=/Game/OurProject/Maps/Forest_Scene/Assets/trees/tree_trunk_mat1
+MRUItem14=/Game/OurProject/Maps/Forest_Scene/Assets/trees/leaf_shader
+MRUItem15=/Game/OurProject/Maps/Forest_Scene/Assets/trees/branch01
+MRUItem16=/Game/OurProject/Maps/Forest_Scene/Assets/trees/whoag
+MRUItem17=/Game/OurProject/Maps/Forest_Scene/Assets/trees/test
+MRUItem18=/Game/OurProject/Maps/Forest_Scene/Assets/trees/tree_trunk_mat
+MRUItem19=/Game/OurProject/Maps/Forest_Scene/Assets/trees/tree_shader
 
 [AssetEditorToolkitTabLocation]
 /Game/LevelPrototyping/Materials/MI_Solid_Blue.MI_Solid_Blue=1
@@ -3602,9 +3601,11 @@ MRUItem19=/Game/OurProject/UI/LevelSelect
 /Game/OurProject/Maps/Forest_Scene/Assets/trees/tree_trunk_mat1.tree_trunk_mat1=1
 /Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0.tree1_0=1
 /Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0_Inst.tree1_0_Inst=1
+/Engine/EngineSky/M_SimpleSkyDome.M_SimpleSkyDome=1
+/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibark.ghiblibark=1
 
 [MaterialInstanceEditor]
-bShowGrid=True
+bShowGrid=False
 bDrawGrid=False
 PrimType=1
 
