--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -210,7 +210,7 @@ LandscapeGizmoRenderComponent="\"Object\" "
 RuntimeVirtualTexture="\"Object\" "
 Landscape="\"Object.VirtualTexture.RuntimeVirtualTextures\" "
 LandscapeProxy="\"Object.VirtualTexture.RuntimeVirtualTextures\" "
-PartitionActor=
+PartitionActor="\"Object.VirtualTexture.RuntimeVirtualTextures\" "
 MaterialExpressionLandscapeLayerBlend="\"Object\" \"Object.Layers\" "
 MaterialExpressionVectorParameter="\"Object\" \"Object.DefaultValue\" "
 GeneralProjectSettings="\"Object\" "
@@ -481,7 +481,7 @@ MaterialExpressionConstant2Vector="\"Object\" "
 MaterialExpressionTransform="\"Object\" "
 
 [Directories2]
-UNR=D:/Unreal Projects/Serious_Games/Serious_Games/Content/OurProject/Maps/Forest_Scene
+UNR=../../../../../../Users/linch/OneDrive/Documents/GitHub/Serious_Games/Serious_Games/Content/OurProject/Maps/Forest_Scene
 BRUSH=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/
 FBX=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/
 FBXAnim=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/
@@ -1446,7 +1446,7 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/Control
 RecentsFiles=C:/Epic/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees
+ContentBrowserTab1.SelectedPaths=/Game/OurProject/Maps/Forest_Scene
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.Locked=False
 ContentBrowserDrawer.FavoritesAreaExpanded=False
@@ -3363,7 +3363,7 @@ BrushComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflect
 StaticMeshActor=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
 DirectionalLight=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,
 SceneComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
-CapsuleComponent=
+CapsuleComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
 PlayerStart=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
 PointLight=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,
 Actor=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
@@ -3402,16 +3402,16 @@ SkeletalMeshActor=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Refl
 ProceduralFoliageBlockingVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
 ProceduralFoliageVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
 WaterBodyLake=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
-WaterBodyLakeComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
+WaterBodyLakeComponent=
 RuntimeVirtualTextureVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
 MeshComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
 LandscapeGizmoRenderComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,WaterSplineComponent.Selected Points.WaterSplineMetadataDetails,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibark
-MRUItem1=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/DefaultMaterial_Mixed_AO
-MRUItem2=/Engine/EngineSky/M_SimpleSkyDome
-MRUItem3=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem0=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem1=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/ghiblibark
+MRUItem2=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/DefaultMaterial_Mixed_AO
+MRUItem3=/Engine/EngineSky/M_SimpleSkyDome
 MRUItem4=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0_Inst
 MRUItem5=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/tree1_0
 MRUItem6=/Game/OurProject/Maps/Forest_Scene/Assets/ghibli_trees/NewMaterial
